cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0003 NEW)

project(TinyXML)

SET(TinyXML_MAJOR_VERSION 2)
SET(TinyXML_MINOR_VERSION 5)
SET(TinyXML_PATCH_VERSION 3)

SET(TinyXML_VERSION ${TinyXML_MAJOR_VERSION}.${TinyXML_MINOR_VERSION}.${TinyXML_PATCH_VERSION})
SET(TinyXML_COMPATIBILITY_VERSION ${TinyXML_MAJOR_VERSION}.${TinyXML_MINOR_VERSION}.0)
SET(TinyXML_SOVERSION ${TinyXML_MAJOR_VERSION}.${TinyXML_MINOR_VERSION}.0)

set(TinyXML_source
    tinystr.cpp
    tinyxml.cpp
    tinyxmlerror.cpp
    tinyxmlparser.cpp
)

SET(TinyXML_LIBRARY_NAME TinyXML)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../)
set(LIBRARY_OUTPUT_PATH  ../../lib)

SOURCE_GROUP("TinyXML" FILES ${TinyXML_source})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(TinyXML STATIC ${TinyXML_source})

IF(UNIX)
	SET_TARGET_PROPERTIES(TinyXML PROPERTIES
		VERSION ${TinyXML_VERSION}
		SOVERSION ${TinyXML_SOVERSION}
	)

    set(CMAKE_CXX_FLAGS -fPIC)

ENDIF(UNIX)

set_target_properties(TinyXML PROPERTIES SOLUTION_FOLDER Dependencies)

